# WOLF-Attendance

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  api.js  index.css
docs/: CLOUD_ROADMAP.md
server/: classify.js  config.js  dateUtils.js  index.js  planner.js  providers.js  storage.js
src/: App.tsx  analytics.ts  api.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  dateutils.rs  lib.rs  models.rs  planner.rs  storage.rs
src/components/layout/: Dock.tsx  Sidebar.tsx  Topbar.tsx
src/components/shared/: BaselineEditor.tsx  DaySheet.tsx  MarkControl.tsx  PomodoroTimer.tsx  ProgressRing.tsx  SubjectCard.tsx
src/components/ui/: AnimatedCard.tsx  BackgroundFX.tsx  Button.tsx  EmptyState.tsx  Mascot.tsx  PageHeader.tsx  Segmented.tsx  Skeleton.tsx  Tooltip.tsx
src/lib/: motion.ts  utils.ts
src/pages/: Academics.tsx  Analytics.tsx  Calendar.tsx  Dashboard.tsx  Login.tsx  Onboarding.tsx  Productivity.tsx  Profile.tsx  Settings.tsx  Subjects.tsx  Timetable.tsx
src/store/: index.tsx
supabase/: README.md
supabase/migrations/: 0001_init.sql
tools/: README.md  wrapper_7za.py
wolf-core/: Cargo.toml
wolf-core/src/: lib.rs
