[package]
name = "app"
version = "3.1.0"
description = "WOLF Attendance — minimum-days attendance planner"
authors = ["Patel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
chrono = { version = "0.4", features = ["clock"] }
open = "5"
# The attendance algorithm lives in its own pure, fuzz-tested crate so the exact
# same logic can run here, on the cloud API and (via WASM) in the browser.
wolf-core = { path = "../wolf-core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
